# ppbot

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pre-commit-config.yml  Cargo.toml  _run_bot.sh  _run_downtime_bot.sh  blackify_test.py  dump.rdb  pre_commit_test.py  pyproject.toml  readme.md  requirements.txt  rust_utils.pyi
.github/workflows/: CI.yml  black.yml  greetings.yml
cogs/: __init__.py  animal_commands.py  animu_commands.py  beg_command.py  casino_command.py  casino_commands.py  command_event_handler.py  compare_command.py  daily_command.py  dig_command.py  donating_command.py  error_handling.py  fish_command.py  grow_command.py  guild_event_handler.py  help_commands.py  hospital_command.py  hunt_command.py  info_commands.py  leaderboard_command.py  loading.py  new_command.py  ping_command.py  rename_command.py  reply_command.py  shop_commands.py  show_command.py  show_commands.py  voting_events.py
cogs/utils/: __init__.py  bot.py  cards.py  command.py  command_logs.py  command_settings.py  donations.py  errors.py  formatters.py  generate_rewards.py  helpers.py  inventory.py  items.py  managers.py  minigames.py  paginator.py  pps.py  reply_manager.py  streaks.py  typehinted_methods.py  types.py
config/: changelog.toml  command_settings.toml  config.example.toml  database.pgsql  items.toml  minigames.toml
config/dialogue/: config.toml
config/minigames/: beg.toml  dig.toml  fish.toml  global.toml  hunt.toml
downtime_bot/: README.txt  readme.md
downtime_bot/src/: .gitignore  requirements.txt
rust-src/: lib.rs
rust_utils/: lib.rs
(+16 files in other folders)
