[build-system]
requires = ["maturin>=1.8.3,<2.0"]
build-backend = "maturin"

[project]
name = "ppbot"
requires-python = ">=3.13"
dynamic = ["version"]

[tool.pyright]
reportPrivateUsage = false
reportImportCycles = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportMissingParameterType = false
reportMissingTypeArgument = false
reportMissingTypeStubs = false
reportUnknownLambdaType = false
reportIncompatibleVariableOverride = false

[tool.maturin]
features = ["pyo3/extension-module"]
